# candle

./: .gitignore  Cargo.toml  index.html  out.txt  print.html  searchindex.js  searchindex.json
.cargo/: config.toml
att/: .gitignore  Cargo.toml  cycle.json  draw.py  excel.txt
att/src/: lib.rs  main.rs
candle-core/: Cargo.toml
candle-examples/: Cargo.toml
candle-examples/examples/llama/: main.rs
candle-examples/examples/llama-collect-att/: main.rs
candle-examples/examples/llama-sink-simple/: main.rs
candle-examples/examples/llama-sink-sjq/: main.rs
candle-examples/examples/llama-sink-sjq-mixprecicion/: main.rs
candle-examples/examples/llama-sink-sjq-mixprecicion-dynamic-sink/: main.rs
candle-examples/examples/llama-sink-sjq-mixprecicion-dynamic-sink-block-header-same/: main.rs
candle-examples/examples/llama-sink-sjq-mixprecicion-test/: main.rs
candle-examples/examples/llama-sjq/: main.rs
candle-examples/examples/quantized/: main.rs
candle-transformers/: Cargo.toml
candle-transformers/src/models/: llama.rs  llama_sink.rs  llama_sink_mix.rs  llama_sink_mix_dynamic.rs  llama_sink_mix_dynamic_no_header_block.rs  llama_sink_mix_test.rs  mod.rs  quantized_llama.rs
